# kais-movie-agent

./: .gitignore  .score.json  DEPRECATED.md  INTEGRATION.md  OPENMONTAGE_FIT_ASSESSMENT.md  README.md  README.md.ours  SKILL.md  TEST_REPORT.md  _notion_body.json  character-candidates.json  consistency-pass.json  crew.js  geometry-bed.json  movie-schema.json  outline-candidates.json  package-lock.json  package.json  pain-report.json  pipeline.mjs  scene-candidates.json  script-candidates.json  script-locked.json  selected-outline.json  selected-script.json  selected-topic.json  soul-pack.json  sync.js
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  gsd-v6.0-rapid-convergence.md  gsd-v8.4-blueprint.md  gsd-v8.5-blueprint.md  gsd-v8.7-canvas-integration.md  v2.0-MILESTONE-AUDIT.md  v4.0-MILESTONE-AUDIT.md  v6.0-MILESTONE-AUDIT.md
docs/: 4d-anchoring-design.md  WORKFLOW.md  (+14 more)
kais-review-platform/: DEPLOYMENT-FEASIBILITY.md  RESEARCH-REPORT.md  pyproject.toml  start.sh
kais-review-platform/.planning/: MILESTONES.md
kais-review-platform/.planning/milestones/: v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md
kais-review-platform/.planning/research/: ARCHITECTURE-v1.3.md  FEATURES-v1.3.md  PITFALLS-v1.3.md  STACK-v1.3.md  SUMMARY-v1.3.md
kais-review-platform/alembic/versions/: 004_evaluations.py
kais-review-platform/app/: main.py
kais-review-platform/app/api/v1/: actions.py  evaluations.py
kais-review-platform/app/models/: __init__.py  evaluation.py  shot_card_v6.py
kais-review-platform/app/services/: hermes_client.py
(+552 files in other folders)
